--- a/Homework_4/css/container.css
+++ b/Homework_4/css/container.css
@@ -6,7 +6,7 @@ body{
 .container {
     width: 1000px;
     height: 1020px;
-    margin: 0 130px 30px 150px;
+    margin: 0 auto 30px;
     background-color: white;
     box-shadow: -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
