--- a/Homework_6/css/container.css
+++ b/Homework_6/css/container.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     min-width: 930px;
     color: #000;
-    font: 12px/14px Arial, Helvetica, sans-serif;
+    font: 12px/14px Arial, "Helvetica Neue Cyr Roman", sans-serif;
 }
 
 .container {
