--- a/Homework_6/css/header.css
+++ b/Homework_6/css/header.css
@@ -14,7 +14,7 @@
 }
 
 .phone span {
-    font: 18px/19px Arial, Helvetica, sans-serif;
+    font: 18px/19px Arial, "Helvetica Neue Cyr Roman", sans-serif;
     margin: 5px 0px 0 5px;
 }
 
@@ -48,12 +48,12 @@
     background: none;
     color: #fff;
     font-size: 11px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, "Helvetica Neue Cyr Roman", sans-serif;
     text-align: center;
 }
 
 .forma input {
-    font: 12px/13px Arial, Helvetica, sans-serif;
+    font: 12px/13px Arial, "Helvetica Neue Cyr Roman", sans-serif;
     width: 113px;
     height: 14px;
     padding: 0;
@@ -65,7 +65,7 @@
 .forma a {
     margin: 1px 14px 0 0;
     color: #fff;
-    font: 11px/13px Arial, Helvetica, sans-serif;
+    font: 11px/13px Arial, "Helvetica Neue Cyr Roman", sans-serif;
     text-decoration: none;
 }
 
@@ -93,9 +93,3 @@
     margin-top: 9px;
     background-image: url("../img/background.jpg");
 }
-
-.zone {
-    height: 155px;
-    width: 100%;
-}
-
