--- a/Homework_6/css/menu.css
+++ b/Homework_6/css/menu.css
@@ -15,11 +15,11 @@
 }
 
 .menu ul div {
-    clear:both;
+    clear: both;
 }
 
 .menu ul li {
-    font: 14px/19px Arial, Helvetica, sans-serif;
+    font: 14px/19px Arial, "Helvetica Neue Cyr Roman", sans-serif;
     color: #fff;
     width: 105px;
     display: block;
@@ -43,3 +43,15 @@
     border-radius: 10px;
 }
 
+.clearfix:after {
+    content: "";
+    clear: both;
+    display: block;
+    visibility: hidden;
+    height: 0;
+}
+
+.zone {
+    height: 155px;
+    width: 100%;
+}
